crates/jupytypst/tests/snapshots/kernel_snapshots__diagnostics_error_span.snap
---
source: crates/jupytypst/tests/kernel_snapshots.rs
assertion_line: 180
expression: "run_case(KernelCase\n{\n    init: KernelInit::new(RenderMode::Html, SourceMode::Code), fixtures:\n    vec![], requests:\n    vec![Request::Execute { input: r#\"{\n    str(1 + 1)\n    page.fill\n}\"# }],\n})"
---
init:
  default_format: Html
  source_mode: Code
  page_setup: |
  ```typc
  ```
  inputs: []

--- request 1 ---
kind: execute
input: |
  ```typ
  {
      str(1 + 1)
      page.fill
  }
  ```
effective_format: Html
status: error
traceback: |
  ```text
  error: can only be used when context is known
    ┌─ <stdin:1>:3:10
    │
  3 │     page.fill
    │          ^^^^
    │
    = hint: try wrapping this in a `context` expression
    = hint: the `context` expression should wrap everything that depends on this function
  ```
